* R/model.R: Do not log transform the standard dev.
git-svn-id: file:///home/manu/work/irace/svn/trunk@2161 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+ * Fix several bugs with 'log' parameters.
+                                    (Leslie Pérez Cáceres, Manuel López-Ibáñez)
+                                    
  * New option `aclib=` (`--aclib 1`) enables compatibility with the
    GenericWrapper4AC (https://github.com/automl/GenericWrapper4AC/) used by
    AClib (http://aclib.net/). This is EXPERIMENTAL.
