* TODO: add a few ideas.
git-svn-id: file:///home/manu/work/irace/svn/trunk@2169 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/TODO
+++ b/TODO
@@ -23,6 +23,12 @@ TODO R package:
 
 TODO General (in order of importance):
 
+ * Sensitivity analysis: try values around the best configuration found, one at
+   a time.
+
+ * Give priority to user-provided configurations or to default/preferred
+   parameter values when choosing between similarly performing configurations.
+
  * maxBound should a floating-point number. 
 
  * Write a report at the end that checks if the instances are homogeneous and
