* Bump minimum R version to 3.2.0
git-svn-id: file:///home/manu/work/irace/svn/trunk@2171 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/NEWS
+++ b/NEWS
@@ -15,6 +15,7 @@
  * Fix symbol printed in elimination test.               (Manuel López-Ibáñez)
 
  * Use `dynGet()` to find `targetRunner` and `targetEvaluator`.
+   As a result, we now require R >= 3.2.
                                                          (Manuel López-Ibáñez)
  
  * All tests now use `testthat`.                         (Manuel López-Ibáñez)
