* TODO: New item.
git-svn-id: file:///home/manu/work/irace/svn/trunk@2189 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/TODO
+++ b/TODO
@@ -23,6 +23,8 @@ TODO R package:
 
 TODO General (in order of importance):
 
+ * Avoid duplicated elites.
+ 
  * Sensitivity analysis: try values around the best configuration found, one at
    a time.
 
