* Completely re-implement 'log' parameters to fix several bugs. Domains that    contain zero are now rejected. Values from negative domains are treated as    positive, then negated.
git-svn-id: file:///home/manu/work/irace/svn/trunk@2195 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,7 @@
  
- * Fix several bugs with 'log' parameters.
+ * Completely re-implement 'log' parameters to fix several bugs. Domains that
+   contain zero are now rejected. Values from negative domains are treated as
+   positive, then negated.
                                     (Leslie Pérez Cáceres, Manuel López-Ibáñez)
                                     
  * New option `aclib=` (`--aclib 1`) enables compatibility with the
