--- a/NEWS
+++ b/NEWS
@@ -1,10 +1,13 @@
- 
+
+ * Print where irace is installed with --help 
+                                                        (Manuel López-Ibáñez)
+                                                        
  * irace will now complain if the output of target-runner or target-evaluator
    contains extra lines even if the first line of output is correct. This is to
    avoid parsing the wrong output. Unfortunately, this may break setups that
    relied on this behavior. The solution is to only print the output that irace
    expects. 
-                                                        (Manuel López-Ibáñez))
+                                                        (Manuel López-Ibáñez)
    
  * Completely re-implement 'log' parameters to fix several bugs. Domains that
    contain zero are now rejected. Values from negative domains are treated as
