* R/main.R: Improve slightly the header output.
git-svn-id: file:///home/manu/work/irace/svn/trunk@2203 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,5 @@
 
- * Print where irace is installed with --help 
-                                                        (Manuel López-Ibáñez)
+ * Print where irace is installed with --help.          (Manuel López-Ibáñez)
                                                         
  * irace will now complain if the output of target-runner or target-evaluator
    contains extra lines even if the first line of output is correct. This is to
