* 'irace --check' will exit with code 1 if the check is unsuccessful
git-svn-id: file:///home/manu/work/irace/svn/trunk@2205 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,8 @@
 
+
+ * 'irace --check' will exit with code 1 if the check is unsuccessful
+                                                        (Manuel López-Ibáñez)
+
  * Print where irace is installed with --help.          (Manuel López-Ibáñez)
                                                         
  * irace will now complain if the output of target-runner or target-evaluator
