It is possible to specify boundMax without capping.
git-svn-id: file:///home/manu/work/irace/svn/trunk@2211 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,6 @@
 
+ * It is possible to specify boundMax without capping.
+                                    (Leslie Pérez Cáceres, Manuel López-Ibáñez) 
 
  * 'irace --check' will exit with code 1 if the check is unsuccessful
                                                         (Manuel López-Ibáñez)
