--- a/vignettes/irace-package.Rnw
+++ b/vignettes/irace-package.Rnw
@@ -1057,7 +1057,7 @@ is invoked for each candidate configuration, passing as arguments:
     \code{id.instance} & an alphanumeric string that uniquely identifies an instance;\\
     \code{seed} & seed for the random number generator to be used for this evaluation, ignore the seed for deterministic algorithms;\\
     \code{instance} & string giving the instance to be used for this evaluation;\\
-    \code{bound} & optional execution time bound. Only provided when adaptive capping is enabled, see \autoref{sec:capping};\\
+    \code{bound} & optional execution time bound. Only provided when the \parameter{maxBound} option is set in the scenario, see \autoref{sec:capping};\\
     \code{configuration} & the pairs parameter label-value that
     describe this candidate configuration. Typically given as command-line
     switches to be passed to the executable program.\\
@@ -2539,10 +2539,8 @@ memory, might still be considered acceptable if it gives very good results on
 other instances. The configurations which were rejected during the execution of \irace are saved
 in the Rdata output file (see \autoref{sec:output r}).
 \begin{xwarningbox}
-If you are using adaptive capping (\parameter{capping} is enabled) and the 
-configuration budget is specified in total execution time (\parameter{maxTime} option), 
-immediate rejected executions must provide the cost (which must be \code{Inf}) and the 
-execution time which will be used to calculate the used configuration budget. 
+If the configuration budget is specified in total execution time (\parameter{maxTime} option), 
+immediate rejected executions must provide the cost and time (which must be \code{Inf 0}). 
 Nevertheless, rejected configurations will be  excluded from the execution time estimation 
 and the execution bound calculation.
 \end{xwarningbox}
