Values of real-valued parameter are now printed with sufficient precision to satisfy 'digits' (up to digits=15).
git-svn-id: file:///home/manu/work/irace/svn/trunk@2214 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,7 @@
-
+ * Values of real-valued parameter are now printed with sufficient precision to
+   satisfy 'digits' (up to digits=15).
+                                                        (Manuel López-Ibáñez)
+                                                        
  * It is possible to specify boundMax without capping.
                                     (Leslie Pérez Cáceres, Manuel López-Ibáñez) 
 
