NEWS: Use markdown formatting.
git-svn-id: file:///home/manu/work/irace/svn/trunk@2218 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/NEWS
+++ b/NEWS
@@ -1,14 +1,14 @@
  * Values of real-valued parameter are now printed with sufficient precision to
-   satisfy 'digits' (up to digits=15).
+   satisfy `digits` (up to `digits=15`).
                                                         (Manuel López-Ibáñez)
                                                         
  * It is possible to specify boundMax without capping.
                                     (Leslie Pérez Cáceres, Manuel López-Ibáñez) 
 
- * 'irace --check' will exit with code 1 if the check is unsuccessful
+ * `irace --check` will exit with code 1 if the check is unsuccessful
                                                         (Manuel López-Ibáñez)
 
- * Print where irace is installed with --help.          (Manuel López-Ibáñez)
+ * Print where irace is installed with `--help`.          (Manuel López-Ibáñez)
                                                         
  * irace will now complain if the output of target-runner or target-evaluator
    contains extra lines even if the first line of output is correct. This is to
@@ -17,13 +17,14 @@
    expects. 
                                                         (Manuel López-Ibáñez)
    
- * Completely re-implement 'log' parameters to fix several bugs. Domains that
+ * Completely re-implement `log` parameters to fix several bugs. Domains that
    contain zero or negative values are now rejected.
                                     (Leslie Pérez Cáceres, Manuel López-Ibáñez)
                                     
  * New option `aclib=` (`--aclib 1`) enables compatibility with the
    GenericWrapper4AC (https://github.com/automl/GenericWrapper4AC/) used by
    AClib (http://aclib.net/). This is EXPERIMENTAL.
+   `--aclib 1` also sets digits to 15 for compatibility with AClib defaults.
                                                          (Manuel López-Ibáñez)
                                                          
  * Fix printing of output when capping is enabled.
@@ -48,7 +49,7 @@
  * Fix bug in `checkTargetFiles()` (`--check`) with capping.
                                                         (Leslie Pérez Cáceres)
 
- * Clarify a few errors/warnings when maxTime > 0.
+ * Clarify a few errors/warnings when `maxTime` > 0.
                      (Manuel López-Ibáñez, suggested by Haroldo Gambini Santos) 
  
  
@@ -56,7 +57,7 @@
 
  * Use testthat for unit testing.                        (Manuel López-Ibáñez)
 
- * Allow instances to be a list of arbitrary R objects (mlr bugfix).
+ * Allow instances to be a list of arbitrary R objects (`mlr` bugfix).
                                                          (Manuel López-Ibáñez)
  
 3.0  (05/07/2018)
@@ -66,11 +67,11 @@
    is enabled. Please see the user-guide for details.
                                     (Leslie Pérez Cáceres, Manuel López-Ibáñez)
 
- * The package contains an ablation() function implementing the ablation
+ * The package contains an `ablation()` function implementing the ablation
    method for parameter importance analysis by Fawcett and Hoos (2016).
                                      (Leslie Pérez Cáceres, Manuel López-Ibáñez)
 
- * New option 'postselection' executes a post-selection race.
+ * New option `postselection` executes a post-selection race.
                                                         (Leslie Pérez Cáceres)
 
  * At the end of each race, if the race stops before evaluating all instances
@@ -79,7 +80,7 @@
    on more instances are considered better than those evaluated on fewer.
                                     (Manuel López-Ibáñez, Leslie Pérez Cáceres)
 
- * Last active parameter values of numerical parameters (i and r) are carried
+ * Last active parameter values of numerical parameters (`i` and `r`) are carried
    by the sampling model. When a value must be assigned and the parameter was
    previously not active, the sampling is performed around the last value.
                                    (Leslie Pérez Cáceres, Manuel López-Ibáñez)
@@ -90,22 +91,22 @@
  * The user guide documents --version, --help, and --check.
                                                         (Manuel López-Ibáñez)
  
- * A return value of "Inf" from targetRunner/targetEvaluation results in the
-   immediate rejection of the configuration without any further evaluation.
+ * A return value of `Inf` from `targetRunner`/`targetEvaluation` results in
+   the immediate rejection of the configuration without any further evaluation.
    This is useful for handling unreliable or broken configurations that should
-   not stop irace.                                     (Manuel López-Ibáñez)
+   not stop irace.                                        (Manuel López-Ibáñez)
 
- * Numerical parameters may be sampled on a logarithmic scale using "i,log"
-   or "r,log".                                               (Alberto Franzin)
+ * Numerical parameters may be sampled on a logarithmic scale using `i,log`
+   or `r,log`.                                               (Alberto Franzin)
  
- * New target-runner.bat for Windows contributed by André de Souza Andrade.
+ * New `target-runner.bat` for Windows contributed by André de Souza Andrade.
   
  * Fixed all shell scripts calling functions before defining them, which is not
    portable.
                                                          (Manuel López-Ibáñez)
 
- * Fixed '--parallel' bug in Windows that resulted in
-   "Error in checkForRemoteErrors(val)"
+ * Fixed `--parallel` bug in Windows that resulted in
+   `Error in checkForRemoteErrors(val)`.
                                                           (Manuel López-Ibáñez)
 
  * Improve error message when no training instances are given.
