* Fix `irace --check --parallel 2` on Windows.
git-svn-id: file:///home/manu/work/irace/svn/trunk@2222 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,7 @@
 3.2 (18/04/2019)
 
+ * Fix `irace --check --parallel 2` on Windows.         (Manuel López-Ibáñez)
+                                                         
  * Values of real-valued parameter are now printed with sufficient precision to
    satisfy `digits` (up to `digits=15`).
                                                         (Manuel López-Ibáñez)
