--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,5 @@
+ * Fix buggy test that breaks CRAN.                   (Manuel López-Ibáñez)
+                                                        
  * Do not print "23:59:59" when wall-clock time is actually close to zero.
                                                         (Manuel López-Ibáñez)
 
