--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+ * The `irace` executable (`irace.exe` on Windows) is a compiled binary instead
+   of a script. On Windows, `irace.exe` replaces `irace.bat`
+
+
 3.3 (26/04/2019)
 
  * Fix buggy test that breaks CRAN.                   (Manuel López-Ibáñez)
