Fix invalid assert with ordered parameters.
git-svn-id: file:///home/manu/work/irace/svn/trunk@2275 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+ * Fix invalid assert with ordered parameters.
+                                                (Leslie Pérez Cáceres)
+                                                
  * The `irace` executable (`irace.exe` on Windows) is a compiled binary instead
    of a script. On Windows, `irace.exe` replaces `irace.bat`
 
