Use version=2 when saving Rdata files because of:
Serialization format version 3 becomes the default for serialization and saving
of the workspace (save(), serialize(), saveRDS(),
compiler::cmpfile()). Serialized data in format 3 cannot be read by versions of
R prior to version 3.5.0. Serialization format version 2 is still supported and
can be selected by version = 2 in the save/serialization functions. The default
can be changed back for the whole R session by setting environment variables
R_DEFAULT_SAVE_VERSION and R_DEFAULT_SERIALIZE_VERSION to 2. For maximal
back-compatibility, files ‘vignette.rds’ and ‘partial.rdb’ generated by R CMD
build are in serialization format version 2, and resave by default produces
files in serialization format version 2 (unless the original is already in
format version 3).



git-svn-id: file:///home/manu/work/irace/svn/trunk@2296 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+ * Rdata files are saved in version 2 to keep compatibility with older R
+   versions.
+                                                   (Manuel López-Ibáñez)
  * Fix invalid assert with ordered parameters.
                                                 (Leslie Pérez Cáceres)
                                                 
