--- a/NEWS
+++ b/NEWS
@@ -1,12 +1,13 @@
  * Rdata files are saved in version 2 to keep compatibility with older R
    versions.
                                                    (Manuel López-Ibáñez)
- * Fix invalid assert with ordered parameters.
-                                                (Leslie Pérez Cáceres)
+ * Fix invalid assert with ordered parameters:
+   "value >= 1L && value <= length(possibleValues) is not TRUE"
+                                                   (Leslie Pérez Cáceres)
                                                 
  * The `irace` executable (`irace.exe` on Windows) is a compiled binary instead
    of a script. On Windows, `irace.exe` replaces `irace.bat`
-
+                                                   (Manuel López-Ibáñez)
 
 3.3 (26/04/2019)
 
