Use roxygen templates and markdown.
git-svn-id: file:///home/manu/work/irace/svn/trunk@2349 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/TODO
+++ b/TODO
@@ -23,6 +23,8 @@ TODO R package:
 
 TODO General (in order of importance):
 
+ * Federico's implementation of DAG / Complexity metric.
+ 
  * https://github.com/ndangtt/irace-to-pimp
  
  * Use both cost and time to calculate wins, then use a prop.test
