NEWS: mention spear
git-svn-id: file:///home/manu/work/irace/svn/trunk@2364 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/NEWS
+++ b/NEWS
@@ -9,6 +9,11 @@
    of a script. On Windows, `irace.exe` replaces `irace.bat`
                                                    (Manuel López-Ibáñez)
 
+ * inst/examples/Spear contains the Spear (SAT solver) configuration scenario.
+                                                   (Manuel López-Ibáñez)
+
+
+
 3.3 (26/04/2019)
 
  * Fix buggy test that breaks CRAN.                   (Manuel López-Ibáñez)
