* TODO: Mention argparser.
git-svn-id: file:///home/manu/work/irace/svn/trunk@2405 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/TODO
+++ b/TODO
@@ -4,6 +4,8 @@ BUGS: see BUGS file
 
 TODO R package:
 
+ * Use https://cran.r-project.org/web/packages/argparser/index.html
+ 
  * Use
    https://github.com/seandavi/F1000R_BiocWorkflows/blob/master/rnwConversion/processesRnw.R
    to convert the user-guide to Rmarkdown, then use pkgdown to generate a nice
