* R/irace.R: Take into account time used for estimation when reporting minimum maxTime. Print only one warning or error messages.
git-svn-id: file:///home/manu/work/irace/svn/trunk@2407 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/NEWS
+++ b/NEWS
@@ -18,6 +18,10 @@
  * inst/examples/Spear contains the Spear (SAT solver) configuration scenario.
                                                    (Manuel López-Ibáñez)
 
+ * Fixed bug when reporting minimum maxTime required.
+                                           (Reported by Luciana Salete Buriol,
+                                            fixed by Manuel López-Ibáñez)
+
 
 
 3.3 (26/04/2019)
